sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:16: error: value pas is not a member of scala.collection.immutable.Range.Inclusive
      for(i<- nbValeurs -2 to 0 pas-1){
                                ^